# HoughCirclesOpenCL

./: .gitignore  CMakeLists.txt  HoughTransformCircle_Kernels.cl  LICENSE  README.md  Resources.txt  config.toml  create_circle_with_th.cpp  diagram.drawio  literature.txt  main.cpp  reference_model.m
cmake/: GetDependency.cmake  GetOpenCL.cmake
data/: CMakeLists.txt
libs/: CMakeLists.txt
libs/SDKUtil/: CMakeLists.txt
src/: CMakeLists.txt  FindCircle.cl  HoughTransformCircle_Kernels.cl  Kernel.cl  KernelUtils.cpp  KernelUtils.hpp
tests/: CMakeLists.txt  SampleTest.cpp  create_circle_with_th.cpp  reference_model.m
